# ants-azure-demos

./: README.md
.github/: django-web-app.yaml
.github/workflows/: master_ants-django-demo.yml
django-web-app/: .gitignore  manage.py  requirements.txt
django-web-app/antdemo/: asgi.py  settings.py  urls.py  wsgi.py
django-web-app/demo/: urls.py  views.py
fastapi-app-insights/: .gitignore  pyproject.toml
fastapi-app-insights/.devcontainer/: devcontainer.json
fastapi-app-insights/src/: sample.db
fastapi-app-insights/src/example_app/: database.py  main.py  models.py  routes.py
fastapi-app-insights/src/templates/: locations.html
fastapi-cosmos/: .gitignore  main.py  requirements.txt
fastapi-cosmos-beanie/: .gitignore  README.md  requirements.txt  startup.sh
fastapi-cosmos-beanie/demo_app/: main.py
fastapi-functions/: README.md  host.json  main.py  requirements.txt  spec.json
fastapi-functions/api_app/: __init__.py
fastapi-functions/app/: __init__.py  http_asgi.py
fastapi-functions/food/: __init__.py  function.json
fastapi-functions/functions_helpers/: __init__.py
fastapi-functions/helloWorld/: __init__.py  function.json
fastapi-functions/tests/: test_basic.py
fastapi-web-app/: .gitignore  README.md  app.yaml  main.py  startup.sh
flask-cosmos/: .gitignore  app.py  requirements.txt
pypy-fastapi-container-instance/: .gitignore  Dockerfile  README.md  sample.db
python-functions/: README.md  datadotgov_ais_sample.xlsx  example.ipynb  requirements.txt  test.ipynb
quantum-demos/: .gitignore  main.py  pyproject.toml
(+25 files in other folders)
